sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:4: error: illegal start of simple expression
    var v:Int = getValeur(i)
    ^