sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  for (i <- 1 to getNombreValeurs - 1)
  	var v:Int = getValeur(i)
  	while(i != 0) {
      if(plus(v, i - 1))
      	echange(i - 1, i)
      i -= 1
    }
  	echange(v, i)
}